WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275091
[WebXR] IPC Decoder ASSERT in PlatformXR::FrameData::LayerData
https://bugs.webkit.org/show_bug.cgi?id=275091
Summary
[WebXR] IPC Decoder ASSERT in PlatformXR::FrameData::LayerData
Dan Glastonbury
Reported
2024-06-03 20:50:37 PDT
After
https://commits.webkit.org/279523@main
, WebContent process crashes with an invalid PlatformXRSystem_RequestFrameReply message.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-03 20:50:47 PDT
<
rdar://problem/129199953
>
Dan Glastonbury
Comment 2
2024-06-03 21:01:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29486
EWS
Comment 3
2024-06-03 21:58:06 PDT
Committed
279686@main
(bef6d60712de): <
https://commits.webkit.org/279686@main
> Reviewed commits have been landed. Closing PR #29486 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug