[WebXR] PlatformXR::FrameData::ExternalTexture constructor https://bugs.webkit.org/show_bug.cgi?id=275091 rdar://129199953

Reviewed by Mike Wyrzykowski.

After 279523@main, ExternalTexture was being used without explicit
initialization. This lead to a non-zero-on-one value being passed via IPC that
caused the message decode to fail, taking down WebContent process.

To fix this, add explicit initialization of isSharedTexture to ExternalTexture
so that default construction of these objects are always valid.

* Source/WebCore/platform/xr/PlatformXR.h:

Canonical link: https://commits.webkit.org/279686@main